fixed z-index

--- a/pythonvideo/static/css/stylesheet.css
+++ b/pythonvideo/static/css/stylesheet.css
@@ -2401,3 +2401,8 @@ address {
 .skins-wrapper .list-inline > li .color-skin.active, .skins-wrapper .list-inline > li .color-skin:hover {
     outline: 2px solid #2c3e50;
 }
+
+.affix {
+	position: fixed;
+	z-index: 1;
+}
